--- a/prj.conf
+++ b/prj.conf
@@ -1,1 +1,7 @@
 CONFIG_GPIO=y
+
+CONFIG_CORTEX_M_DEBUG_MONITOR_HOOK=y
+CONFIG_DEBUG_THREAD_INFO=y
+CONFIG_SEGGER_DEBUGMON=y
+CONFIG_DEBUG_OPTIMIZATIONS=y
+CONFIG_KERNEL_BIN_NAME="nrf52832_magpie_blank"
