--- a/prj.conf
+++ b/prj.conf
@@ -5,3 +5,7 @@ CONFIG_DEBUG_THREAD_INFO=y
 CONFIG_SEGGER_DEBUGMON=y
 CONFIG_DEBUG_OPTIMIZATIONS=y
 CONFIG_KERNEL_BIN_NAME="nrf52832_magpie_blank"
+
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_EXT_FULL_SWING=y
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_20PPM=y
+CONFIG_CLOCK_CONTROL_FIXED_RATE_CLOCK=y
